--- a/Assignment4/Q2.html
+++ b/Assignment4/Q2.html
@@ -10,24 +10,37 @@
         <label for="Name">Full Name</label> <br>
         <input type="text" id="Name" required><br><br>
         <!-- //username -->
-        <label for="username">Username:</label> <br>
-        <input type="text" id="username" name="username" required><br><br>
+        <label for="username"
+        >Email:</label> <br>
+        <input type="email" id="username" name="username" required <input type="email" id="email" name="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Please enter a valid email address" placeholder="example@domain.com"><br><br>
         <!-- password -->
-         <label for="Password">Password</label> <br>
+         <label for="Password">Password:</label> <br>
          <input type="text" id="Password" name="Password" required><br><br>
         <!-- //phone number -->
-        <label for="phoneno">Phone Number</label>
-        <input type="number" id="phoneno" name="phoneno" required> <br><br>
+         <br>
+        <label for="phoneno">Phone Number:</label>
+        <input type="tel" id="phoneno" name="phoneno" required> <br><br>
         <!-- gender -->
-         <label for="gender">Gender</label> <br>
+         <label for="gender">Gender:</label> <br>
         <input type="radio" id="gender" name="gender" value="Male"> Male<br>
         <input type="radio" id="gender" name="gender" value="Female">Female<br>
+        <input type="radio" name="gender" id="gender">Others <br>
         <br><br>
-        //age group
-         <label for="agegroup">Age Group</label> <br>
-        <input type="" id="agegroup" name="agegroup" > Male<br>
-        <input type="" id="gender" name="gender">Female<br>
-        <br><br>
+        <!-- //age group -->
+        <label for="age-group">Age-group</label>
+        <select name="age-group" id="age-group">
+            <option value="uder-18"></option>
+            <option value="18-24">18-24</option> <option value="25-34">25-34</option> <option value="35-44">35-44</option> <option value="45-54">45-54</option> <option value="55-64">55-64</option> <option value="65-above">65 or Above</option> </select><br><br
+        </select>
+        <!-- topic of interest -->
+         <label for="toi">Topic of Interest</label>
+         <input type="checkbox" id="toi" name="toi" value="topic 1">
+         <label for="toi">Topic 1</label>
+         <input type="checkbox" id="toi" value="topic 2">
+         <label for="toi2">Topic 2</label>
+         <!-- register button -->
+          <button type="submit">Register</button>
+        
     </form>
 </body>
 </html>
