--- a/Assignment4/Q4.html
+++ b/Assignment4/Q4.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Job Application Form</title>
+  <title>Job Application Form 23BPS1001</title>
   
 </head>
 <body>
   <form id="jobApplicationForm">
-    <!-- Page 1: Personal Details -->
+   
     <div class="form-page active" id="page1">
       <h2>Personal Details</h2>
       <label for="name">Name:</label>
@@ -15,10 +15,9 @@
       <input type="text" id="address" name="address" required><br><br>
       <label for="contact">Contact Info:</label>
       <input type="text" id="contact" name="contact" required><br><br>
-      <button type="button" onclick="nextPage(2)">Next</button>
+      <button type="button" ">Next</button>
     </div>
 
-    <!-- Page 2: Educational Background -->
     <div class="form-page" id="page2">
       <h2>Educational Background</h2>
       <label for="degree">Degree:</label>
@@ -27,11 +26,10 @@
       <input type="text" id="year" name="year" required><br><br>
       <label for="institution">Institution Name:</label>
       <input type="text" id="institution" name="institution" required><br><br>
-      <button type="button" onclick="previousPage(1)">Previous</button>
-      <button type="button" onclick="nextPage(3)">Next</button>
+      <button type="button" ">Previous</button>
+      <button type="button" ">Next</button>
     </div>
 
-    <!-- Page 3: Work Experience -->
     <div class="form-page" id="page3">
       <h2>Work Experience</h2>
       <label for="company">Company Name:</label>
@@ -42,7 +40,7 @@
       <input type="text" id="duration" name="duration" required><br><br>
       <label for="resume">Upload Resume:</label>
       <input type="file" id="resume" name="resume" required><br><br>
-      <button type="button" onclick="previousPage(2)">Previous</button>
+      <button type="button" ">Previous</button>
       <button type="submit">Submit</button>
     </div>
   </form>
